--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dat.sem3</groupId>
-    <artifactId>quickstart</artifactId>
+    <artifactId>boats</artifactId>
     <version>1.0.1</version>
     <packaging>war</packaging>
 
