--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dat.sem3</groupId>
-    <artifactId>boats</artifactId>
+    <artifactId>boatstuesday</artifactId>
     <version>1.0.1</version>
     <packaging>war</packaging>
 
-    <name>boats </name>
+    <name>boatstuesday </name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -20,7 +20,7 @@
 
         <!-- TODO: Add your own database name -->
         <!-- IMPORTANT-1: The database should exist on your droplet -->
-        <db.name>boat</db.name>
+        <db.name>boatstuesday</db.name>
     </properties>
     
     <dependencies>
